# dev-conf-2023-lean-mlops

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
.dvc/: .gitignore
data/raw/: california_housing.csv
data_local/features/california_housing/social_features/: .gitignore
ml_products/property_price_prediction/: train.py
mlops/: featurestore.py  ml_common.py  pipeline.py  utils.py
starter_data/: README.md  california_housing.parquet
