[tool.poetry]
name = "dev-conf-2023-lean-mlops"
version = "0.1.0"
description = "DevConf 2023 Lean MLOps demo code"
authors = ["Austin Poulton <austin.poulton@equalexperts.com>"]
readme = "README.md"
packages = [{include = "dev_conf_2023_lean_mlops"}]

[tool.poetry.dependencies]
python = "3.10.10"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
plotly = "^5.13.1"
duckdb = "^0.7.1"
duckdb-engine = "^0.6.9"
jupysql = "^0.6.3"
numba = "^0.56.4"
dvc = "^2.46.0"
mlflow = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
